--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "Hucz",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "cssnano": "^3.10.0",
     "eslint": "^4.13.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-rollup": "^2.15.0",
     "gulp-sass": "^3.1.0",
